// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageName": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the example-todo-main fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageName": "HomePage",
    "path": "/",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "typescriptPage",
    "pageName": "TypeScriptPage",
    "path": "/typescript",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/TypeScriptPage/TypeScriptPage.tsx",
    "name": "TypeScriptPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "someOtherPage",
    "pageName": "EditUserPage",
    "path": "/somewhereElse",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/admin/EditUserPage/EditUserPage.jsx",
    "name": "EditUserPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "fooPage",
    "pageName": "FooPage",
    "path": "/foo",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/FooPage/FooPage.tsx",
    "name": "FooPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "barPage",
    "pageName": "BarPage",
    "path": "/bar",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BarPage/BarPage.tsx",
    "name": "BarPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": true,
    "name": "privatePage",
    "pageName": "PrivatePage",
    "path": "/private-page",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/PrivatePage/PrivatePage.tsx",
    "name": "PrivatePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageName": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the example-todo-main-with-errors fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageName": "HomePage",
    "path": "/",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageName": "HomePage",
    "path": "/",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.js",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "something-else",
    "pageName": "DoesNotExist",
    "path": "/{foo}/{foo}",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "Routes",
    "pageName": "NotFoundPage",
    "path": undefined,
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.js",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;

exports[`From within the test-project fixture router 0 routes return the correct pages 1`] = `
Map {
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "login",
    "pageName": "LoginPage",
    "path": "/login",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/LoginPage/LoginPage.tsx",
    "name": "LoginPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "signup",
    "pageName": "SignupPage",
    "path": "/signup",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/SignupPage/SignupPage.tsx",
    "name": "SignupPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "forgotPassword",
    "pageName": "ForgotPasswordPage",
    "path": "/forgot-password",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ForgotPasswordPage/ForgotPasswordPage.tsx",
    "name": "ForgotPasswordPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "resetPassword",
    "pageName": "ResetPasswordPage",
    "path": "/reset-password",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ResetPasswordPage/ResetPasswordPage.tsx",
    "name": "ResetPasswordPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "newContact",
    "pageName": "ContactNewContactPage",
    "path": "/contacts/new",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "editContact",
    "pageName": "ContactEditContactPage",
    "path": "/contacts/{id:Int}/edit",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contact",
    "pageName": "ContactContactPage",
    "path": "/contacts/{id:Int}",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contacts",
    "pageName": "ContactContactsPage",
    "path": "/contacts",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "newPost",
    "pageName": "PostNewPostPage",
    "path": "/posts/new",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "editPost",
    "pageName": "PostEditPostPage",
    "path": "/posts/{id:Int}/edit",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "post",
    "pageName": "PostPostPage",
    "path": "/posts/{id:Int}",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "posts",
    "pageName": "PostPostsPage",
    "path": "/posts",
    "prerender": false,
    "warnings": [],
  } => undefined,
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "waterfall",
    "pageName": "WaterfallPage",
    "path": "/waterfall/{id:Int}",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/WaterfallPage/WaterfallPage.tsx",
    "name": "WaterfallPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": true,
    "name": "profile",
    "pageName": "ProfilePage",
    "path": "/profile",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ProfilePage/ProfilePage.tsx",
    "name": "ProfilePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": true,
    "isNotFound": false,
    "isPrivate": false,
    "name": "blogPost",
    "pageName": "BlogPostPage",
    "path": "/blog-post/{id:Int}",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/BlogPostPage/BlogPostPage.tsx",
    "name": "BlogPostPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "contactUs",
    "pageName": "ContactUsPage",
    "path": "/contact",
    "prerender": false,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/ContactUsPage/ContactUsPage.tsx",
    "name": "ContactUsPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "about",
    "pageName": "AboutPage",
    "path": "/about",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/AboutPage/AboutPage.tsx",
    "name": "AboutPage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": false,
    "isPrivate": false,
    "name": "home",
    "pageName": "HomePage",
    "path": "/",
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/HomePage/HomePage.tsx",
    "name": "HomePage",
    "warnings": [],
  },
  RedwoodRoute {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "hasParameters": false,
    "isNotFound": true,
    "isPrivate": false,
    "name": "notfound",
    "pageName": "NotFoundPage",
    "path": undefined,
    "prerender": true,
    "warnings": [],
  } => RedwoodPage {
    "errors": [],
    "filepath": "/web/src/pages/NotFoundPage/NotFoundPage.tsx",
    "name": "NotFoundPage",
    "warnings": [],
  },
}
`;
